Fixed issue where Day and Week views cause app to crash

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,17 +17,15 @@
         android:name="com.mobdeve.s11.mco11.animocalendar.MonthActivity"
         android:label="JANUARY 2024" />
 
-    <fragment
+    <activity
         android:id="@+id/nav_week"
-        android:name="com.mobdeve.s11.mco11.animocalendar.WeekFragment"
-        android:label="JANUARY 2024"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.mobdeve.s11.mco11.animocalendar.WeekActivity"
+        android:label="JANUARY 2024" />
 
-    <fragment
+    <activity
         android:id="@+id/nav_day"
-        android:name="com.mobdeve.s11.mco11.animocalendar.DayFragment"
-        android:label="JANUARY 2024"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.mobdeve.s11.mco11.animocalendar.DayActivity"
+        android:label="JANUARY 2024" />
 
     <!-- Settings group -->
     <fragment
@@ -35,12 +33,6 @@
         android:name="com.mobdeve.s11.mco11.animocalendar.PreferencesFragment"
         android:label="Preferences"
         tools:layout="@layout/fragment_home" />
-
-<!--    <fragment-->
-<!--        android:id="@+id/nav_sync"-->
-<!--        android:name="com.mobdeve.s11.mco11.animocalendar.ui.home.HomeFragment"-->
-<!--        android:label="@string/menu_home"-->
-<!--        tools:layout="@layout/fragment_home" />-->
 
     <fragment
         android:id="@+id/nav_change_theme"
@@ -54,10 +46,4 @@
         android:name="com.mobdeve.s11.mco11.animocalendar.HelpFragment"
         android:label="Help"
         tools:layout="@layout/fragment_home" />
-
-<!--    <fragment-->
-<!--        android:id="@+id/nav_feedback"-->
-<!--        android:name="com.mobdeve.s11.mco11.animocalendar.ui.home.HomeFragment"-->
-<!--        android:label="@string/menu_home"-->
-<!--        tools:layout="@layout/fragment_home" />-->
 </navigation>
