--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HelpFragment">
+    tools:context=".HelpActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -11,5 +13,4 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="HELP VIEW"
         android:textSize="34sp" />
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
