--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditTaskFragment">
+    tools:context=".EditTaskActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout"
@@ -117,6 +117,7 @@
                 android:layout_height="71dp"
                 android:layout_marginTop="8dp"
                 android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/taskDescription"
                 tools:layout_editor_absoluteX="50dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
