--- a/app/src/main/res/layout/activity_themes.xml
+++ b/app/src/main/res/layout/activity_themes.xml
@@ -7,10 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".ThemesActivity">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvThemeList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="THEMES"
-        android:textSize="34sp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
