Removed unused colors

--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -28,14 +28,14 @@
     <include layout="@layout/content_main" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/addFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
         app:srcCompat="@drawable/baseline_add_24"
-        android:backgroundTint="?attr/colorSecondary"
-        app:tint="?attr/colorOnSecondary" />
+        android:backgroundTint="?attr/colorPrimary"
+        app:tint="?attr/colorOnPrimary" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
